monitoria/mac323/4-2-33/grades/Vinícius-Pessoa-Duarte_190860_assignsubmission_file_WordDAG.java.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
LevelTraversal.java:8: error: class WordDAG is public, should be declared in a file named WordDAG.java
public class WordDAG {
       ^
1 error
